[🚀 사이클2 - 미션 (예약 변경/취소와 에러 처리)] 피즈 미션 제출합니다. (#465)
* refactor: 매개변수명 이해하기 쉽게 변경

* refactor: fake dao를 생성해, service를 순수 자바 테스트로 변경

* docs: 구현할 기능 목록 및 API 명세서 추가

* refactor: 코드 가독성 및 통일성 향상

* refactor: 해당 id의 데이터가 존재하는지 확인하는 로직을 서비스로 이동

* refactor: dao 이름 repository로 변경

* feat: 지나간 시간에 예약할 경우 예외 발생 기능 구현, ErrorCode 수정

* docs: 구현 완료한 기능 확인

* test: 해당 시간, 테마를 사용 중인 예약이 있을 때 삭제 요청 시 예외 발생 검증하는 테스트 구현

* docs: 요구사항 추가 및 구현 완료한 기능 확인

* feat: 테마 랭킹 조회 기간 검증하는 기능 구현

* docs: 요구사항 추가/수정 및 구현 완료한 기능 확인

* refactor: dto request, response 패키지 분리

* feat: 사용자 이름으로 예약 조회하는 기능 구현

* feat: 기존 예약을 변경하는 API 구현

* docs: 구현 완료한 기능 확인

* feat: 없는 예약 또는 지나간 예약 삭제 요청시 예외 발생 기능 구현

* feat: 중복된 예약 시간 생성 시 예외 발생하는 기능 구현

* feat: 예약 가능한 시간 조회할 때 테마가 없거나 지난 날짜로 조회하는 경우 예외 발생 기능 구현

* refactor: ErrorCode에 HttpStatus 제거, GlobalExceptionHandler에서 HttpStatus 넣어주도록 변경

* refactor: ErrorResponse 필드명 변경

* docs: 구현 완료한 기능 확인, 에러 응답 예시 업데이트

* refactor: 변경된 예외 종류에 따라 Service, ServiceTest 업데이트

* feat: 지나간 예약을 수정 요청할 경우 예외 발생 기능 구현

* refactor: Service의 검증, 중복 메서드 분리

* test: themeRepository의 existById test 추가

* test: reservation 인수 테스트에 update 추가

* refactor: update 메서드에 @Transactional 추가

* feat: 생성, 수정한 API에 따라 프론트 코드 업데이트

* refactor: service 메서드 순서 변경

* refactor: 도메인 검증 예외 log를 error로 변경

* refactor: 커스텀 예외에 상속 적용

* refactor: 요청 예외를 하나로 통일(CustomInvalidRequestException), 도메인 검증 커스텀 예외 생성(CustomInvalidDomainException)

* feat: 요청 json 예외, 파라미터 타입 예외 추가

* refactor: update 시 기존과 동일한 시간으로 요청해도 예외 발생하지 않도록 변경

* fix: update 시 이전 요청과 같은지 확인하는 로직 수정

* refactor: service에 Clock을 주입해, 테스트가 용이하도록 변경